--- a/widget_secret_list_item.ui
+++ b/widget_secret_list_item.ui
@@ -23,7 +23,22 @@
    <item row="0" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
+      <widget class="QLabel" name="secret_display_name">
+       <property name="text">
+        <string>N/A</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QLabel" name="secret_name">
+       <property name="font">
+        <font>
+         <italic>true</italic>
+         <strikeout>false</strikeout>
+         <kerning>true</kerning>
+         <fontweight>Light</fontweight>
+        </font>
+       </property>
        <property name="text">
         <string>N/A</string>
        </property>
